fix search button and change editing style in dark mode

--- a/src/styles/todo-list.scss
+++ b/src/styles/todo-list.scss
@@ -34,6 +34,7 @@
     line-height: 100%;
     text-transform: uppercase;
     color: var(--main-color);
+    background-color: var(--secondary-color);
     
     flex: 1;
     border: 0;
